--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇳🇱 荷兰-227.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 波兰-1.08MB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.107.226.48, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-2.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 波兰-855.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 波兰-891.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 波兰-644.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 波兰-682.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-239.8KB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.28MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇳 中国-9.68MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.50MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.24MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 波兰-232.4KB/s(Youtube:不良林), server: 217.30.10.64, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.24MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
-      - 波兰-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 波兰-855.0KB/s(Youtube:不良林)
-      - 波兰-891.3KB/s(Youtube:不良林)
-      - 波兰-644.1KB/s(Youtube:不良林)
-      - 波兰-682.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
+      - 波兰-232.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
