--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-239.8KB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.28MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇨🇳 中国-9.68MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.50MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.24MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 波兰-232.4KB/s(Youtube:不良林), server: 217.30.10.64, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.24MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.15MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-201.9KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-208.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇬🇧 英国-208.0KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.33MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-959.3KB/s(Youtube:不良林), server: 43.200.6.24, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-834.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.43MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇭🇰 香港-308.2KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-174.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.24MB/s(Youtube:不良林)
-      - 波兰-232.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
