--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇳 中国-9.15MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-201.9KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-240.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
   - {name: 🇳🇱 荷兰-208.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇬🇧 英国-208.0KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.33MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-959.3KB/s(Youtube:不良林), server: 43.200.6.24, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-11.16MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-834.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.43MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
   - {name: 🇭🇰 香港-308.2KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -73,14 +73,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.2KB/s(Youtube:不良林)
 rules:
