--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-9.15MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-243.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇨🇳 中国-240.2KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇳🇱 荷兰-208.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-11.16MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-7.81MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-201.9KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
   - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-243.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-240.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
